Changes made between Gamera File Releases
=========================================

 - new plugin kernel_density in listutilities

 - new option "iterations" for bbox_merging and significant speedup

 - Fourier descriptors implemented based on EURASIP JASP 2013 paper

 - moments, zernike_moments, and diagonal_projection no longer
   produce division by zero error on empty images

 - new options for outline() and contour_samplepoints()

 - graph_color_ccs did not work when only one Cc given

 - bug fixed in zernike_moments that made the feature less useful

 - export/import to/from OpenCV images

 - interactive classifier: "Unckeck all" button in
   "Change feature set" dialogue

 - args dialogue sizes now dynamically computed

 - all user provided filenames (training XML files etc) converted
   to unicode to allow for arbitrary filenames

 - new argument 'unique' for graph_color_ccs based on IVAPP 2013 paper

 - node.nodes() in graph API now works

 - option --nowx for setup.py to install without wxPython


Version 3.4.0, Nov 20, 2012
----------------------------

 - GA optimization module rewritten from scratch
     o evolutionary optimization now for selection and weighting implemented
     o replacement of used library (GALib was replaced by EO)
     o optimization process is now highly configurable
     o fitness evaluation is now parallelizable
   (thanks to Tobias Bolten)

 - knncoremodule splitted in header and implementation file

 - feature normalization for noninteractive classifier now works

 - feature selection supported as a better alternative to feature weighting

 - components of individual features can be switsched on or off with
   knn.kNN[Non]Interactive.set_selections_by_feature[s]

 - Point-types can be added

 - new plugins brink_threshold and diagonal_projections (feature)
   (thanks to Andrew Hankinson)

 - new C++ operators in dimension type Point:
   o addition with operator+
   o comparison with operator<